--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -66,3 +66,13 @@ button:hover {
   background-color: #4CAF50;
 }
 
+.listItems{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 10px;
+  padding: 5px;
+  border:1px solid #2E8B57;
+  border-radius: 10px;
+  width:90%;
+}
