--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -139,3 +139,17 @@ button:hover {
   border-radius: 5px;
   background-color: #fff;
 }
+
+.detailsContainer{
+  display:flex;
+  justify-content: center;
+  align-content:center;
+  flex-direction: column;
+  width:80%;
+  padding:50px;
+}
+.btnBack{
+  width: 150px;
+  margin-left: 10px;
+  align-items: center;
+}
