--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: center;
   width: 100vw;
-  padding: 10px 20px;
+  /* padding: 10px 20px; */
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
